# Sikkerhet-i-programvare-og-nettverk

./: README.md
Øving 01/: Hello_World.cpp
Øving 02/: README.md
Øving 03/Oppgave 1/: file1_new.cpp
Øving 03/Oppgave 2 og 3/: README.md
Øving 03/Oppgave 2 og 3/farge-demo/: Makefile2  hellofarge  hellofarge.c
Øving 04/Oppgave 1/: asm.lang  hello.s
Øving 04/Oppgave 2 og 3/: main.c
Øving 05/Oppgave 1/: script.sh
Øving 05/Oppgave 3/: flyttjpg.sh  script.sh
Øving 05/Oppgave 4/: script.sh
Øving 05/Oppgave 5/: script.sh
Øving 05/Oppgave 6/: README.md
Øving 06/Oppgave 1/: README.md
Øving 06/Oppgave 2/: README.md
Øving 06/Oppgave 3/: CMakeLists.txt
Øving 08/Oppgave 3/: CMakeLists.txt  main.cpp
Øving 1/: Hello_World.c
Øving 10/Oppgave 1/: .gitignore  index.js  package-lock.json  package.json
Øving 10/Oppgave 1/client/: index.html  script.js  style.css
Øving 10/Oppgave 2/: README.md
Øving 11/Oppgave 1/: REDME.md
Øving 11/Oppgave 2/: epostsjekk
Øving 12/: index.js  package-lock.json  package.json
Øving 12/client/: index.html  script.js  style.css
Øving 14/Oppgave 3/: CMakeLists.txt  main.cpp
Øving 18/: CMakeLists.txt  oppgave4.cpp
Øving 2/: README.md
Øving 3/Oppgave 1/: README.md  patchfile
Øving 3/Oppgave 2 og 3/: README.md
Øving 3/Oppgave 2 og 3/farge-demo/: Makefile  (+1 more)
Øving 4/Oppgave 1/: README.md
Øving 4/Oppgave 2 og 3/: README.md
Øving 5/Oppgave 2/: script.sh
Øving 6/Oppgave 2/: README.md
Øving 6/Oppgave 3/: main.cpp
Øving 8/Oppgave 1/: CMakeLists.txt  main.cpp
Øving 8/Oppgave 2/: CMakeLists.txt  main.cpp
(+3 files in other folders)
